apps/base/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-data
        - name: registry-htpasswd
          secret:
            secretName: registry-htpasswd
            items:
              - key: htpasswd
                path: htpasswd
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
            - name: registry-htpasswd
              mountPath: /auth
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
