apps/base/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: registry
  name: registry
spec:
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
  type: ClusterIP
