apps/base/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: registry
  name: registry
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: registry
      port:
        number: 5000
  tls:
    - hosts:
        - registry
